--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         </ul>
 
-        <button class="btn btn-primary">Chat with us</button>
+       <button class="btn btn-primary"><a href="https://wa.link/z027wf" style="color: aliceblue;">Chat With Us</a></button>
 
       </nav>
 
