--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/GA Digital.png" height="24px" alt="SCEO logo">
+        <img src="./assets/images/GA Digital.png" height="24px" alt="Goali Digital logo">
       </a>
 
       <button class="nav-open-btn" data-nav-open-btn>
