--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <div class="service-card">
 
                 <div class="card-icon">
-                  <img src="/assets/images/location.gif" height="100px">
+                  <img src="./assets/images/location.gif" height="100px">
                   <!-- <ion-icon name="location-outline"></ion-icon> -->
                 </div>
 
@@ -213,7 +213,7 @@
               <div class="service-card">
 
                 <div class="card-icon">
-                  <img src="/assets/images/graph.gif" height="100px">
+                  <img src="./assets/images/graph.gif" height="100px">
                   <!-- <ion-icon name="bar-chart-outline"></ion-icon> -->
                 </div>
 
@@ -231,7 +231,7 @@
 
                 <div class="card-icon">
 
-                  <img src="/assets/images/pie.gif" height="100px">
+                  <img src="./assets/images/pie.gif" height="100px">
                   <!-- <ion-icon name="pie-chart-outline"></ion-icon> -->
                 </div>
 
@@ -248,7 +248,7 @@
               <div class="service-card">
 
                 <div class="card-icon">
-                  <img src="/assets/images/Around the world.gif" height="100px">
+                  <img src="./assets/images/Around the world.gif" height="100px">
                   <!-- <ion-icon name="magnet-outline"></ion-icon> -->
                 </div>
 
