--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
               <h2 class="h3 section-title">SEO</h2>
 
               <p class="section-text">
-                For businesses that want to succeed online, SEO optimization is an essential component.
-                With our SEO strategies, you can grow your business online and rank higher in Google search results.
-                We will also provide you with weekly and monthly reports regarding the keywords used, links obtained, and indexed pages for your page.
+               Search engine optimisation, or SEO as it's commonly known, is an important element of digital marketing. It involves adjusting your website to get as close to the top of search engine rankings as possible. By using targeted keywords in your content and improving the overall design and user experience of your site, you can make sure that potential customers are more likely to find you when they're searching online. Having a strong SEO strategy will help improve visibility within the larger marketplace, ultimately leading to increased traffic and conversions on your site.
               </p>
 
               <p class="section-text">
